Fixed image scroll on horizontal axis: overflow-x

--- a/client/src/assets/main.css
+++ b/client/src/assets/main.css
@@ -8,7 +8,7 @@
 @import 'stylesheets/flex-layout.css';
 
 #app {
-  /* width: 100%; */
+  width: 100%;
   max-width: none; 
   margin: 0; 
   padding: 0;
