--- a/client/src/assets/stylesheets/utility.css
+++ b/client/src/assets/stylesheets/utility.css
@@ -14,24 +14,23 @@
 .border-radius-sm {
     border-radius: var(--space-sm);
 }
+.border-radius-lg {
+    border-radius: var(--space-lg);
+}
   
 /* Paddings */
 .p-xs {
     padding: var(--space-xs);
 }
-  
 .p-sm {
     padding: var(--space-sm);
-}
-  
+} 
 .p-md {
     padding: var(--space-md);
 }
-  
 .p-lg {
     padding: var(--space-lg);
-}
-  
+} 
 .p-xl {
     padding: var(--space-xl);
 }
@@ -40,19 +39,15 @@
 .m-xs {
     margin: var(--space-xs);
 }
-  
 .m-sm {
     margin: var(--space-sm);
 }
-  
 .m-md {
     margin: var(--space-md);
 }
-  
 .m-lg {
     margin: var(--space-lg);
 }
-  
 .m-xl {
     margin: var(--space-xl);
 }
@@ -61,19 +56,15 @@
 .gap-xs {
     gap: var(--space-xs);
 }
-  
 .gap-sm {
     gap: var(--space-sm);
 }
-  
 .gap-md {
     gap: var(--space-md);
 }
-  
 .gap-lg {
     gap: var(--space-lg);
 }
-  
 .gap-xl {
     gap: var(--space-xl);
 }
